[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/trade/CommodityMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/trade/BuyFromStationButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/arrow_right.png" type="Texture" id=3]
[ext_resource path="res://scenes/trade/CommodityIconInfo.tscn" type="PackedScene" id=4]




[node name="CommodityMenu" type="MarginContainer"]
margin_right = 536.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 536.0
margin_bottom = 68.0
custom_constants/separation = 50
alignment = 1

[node name="InHoldCt" type="Label" parent="HBoxContainer"]
margin_top = 27.0
margin_right = 40.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" parent="HBoxContainer" instance=ExtResource( 2 )]

[node name="CommodityBox" parent="HBoxContainer" instance=ExtResource( 4 )]

[node name="Sell" type="Button" parent="HBoxContainer"]
margin_left = 418.0
margin_right = 446.0
margin_bottom = 68.0
icon = ExtResource( 3 )

[node name="ForSaleCt" type="Label" parent="HBoxContainer"]
margin_left = 496.0
margin_top = 27.0
margin_right = 536.0
margin_bottom = 41.0
rect_min_size = Vector2( 40, 0 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
